--- a/.github/workflows/test-schedule-wait.yml
+++ b/.github/workflows/test-schedule-wait.yml
@@ -2,8 +2,17 @@ name: test schedule wait
 
 on:
   workflow_dispatch:
-    # inputs:
-    #   wait-time:
+    inputs:
+      wait-time:
+        type: string
+        description: "How long the workflow should wait (ms)"
+        required: false
+        default: "0" # Same default as austenstone/schedule
+      wait-delay:
+        type: string
+        description: "How long between checks (ms)"
+        required: false
+        default: "20000" # Same default as austenstone/schedule
 
 jobs:
   do-schedule:
@@ -23,4 +32,5 @@ jobs:
           github-token: ${{ steps.github-app.outputs.token }}
           workflow: output-inputs.yml
           timezone: UTC
-          wait-ms: "45000"
+          wait-ms: ${{ inputs.wait-time }} # Check for [inputted time]
+          wait-delay-ms: ${{ inputs.wait-delay }} # Wait [inputted time] between checks
