--- a/.github/workflows/test-schedule-wait.yml
+++ b/.github/workflows/test-schedule-wait.yml
@@ -27,10 +27,11 @@ jobs:
           private-key: ${{ secrets.SCHEDULE_APP_KEY }}
           owner: ${{ github.repository_owner }}
       
-      - uses: austenstone/schedule@v1.3
+      - uses: matthew-lewis20/schedule@add-optional-gates
         with:
           github-token: ${{ steps.github-app.outputs.token }}
           workflow: output-inputs.yml
           timezone: UTC
-          wait-ms: ${{ inputs.wait-time }} # Check for [inputted time]
-          wait-delay-ms: ${{ inputs.wait-delay }} # Wait [inputted time] between checks
+          # wait-ms: ${{ inputs.wait-time }} # Check for [inputted time]
+          # wait-delay-ms: ${{ inputs.wait-delay }} # Wait [inputted time] between checks
+          skip-check-workflows: 'true'
