--- a/.github/workflows/deploy-to-prod-test.yml
+++ b/.github/workflows/deploy-to-prod-test.yml
@@ -83,13 +83,12 @@ jobs:
           private-key: ${{ secrets.SCHEDULE_APP_KEY }}
           owner: ${{ github.repository_owner }}
 
-      - uses: matthew-lewis20/schedule@general-improvments
+      - uses: matthew-lewis20/schedule@cutback-changes
         with:
           github-token: ${{ steps.github-app.outputs.token }}
           date: ${{ steps.date.outputs.date }}
           workflow: output-inputs.yml
           timezone: UTC
-          skip-check-workflows: 'true'
           inputs: |
             {
               "cluster": "${{ inputs.cluster }}",
