--- a/.github/workflows/test-api-variable-call.yml
+++ b/.github/workflows/test-api-variable-call.yml
@@ -37,6 +37,7 @@ jobs:
     needs: print-api-vars
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Call action
         uses: ./.github/actions/output-job-inputs
         with:
