--- a/.github/workflows/test-api-variable-call.yml
+++ b/.github/workflows/test-api-variable-call.yml
@@ -18,7 +18,7 @@ jobs:
   print-api-vars:
     runs-on: ubuntu-latest
     outputs:
-      variables: ${{ steps.vars-api.outputs.variables-api }}
+      variables: ${{ steps.vars-api.outputs.variables }}
     steps:
       - name: echo variable vars (api)
         id: vars-api
@@ -31,7 +31,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{ github.repository }}/actions/variables?per_page=30 | jq .variables)
           
-          echo "variables-api=$API_VAR_CALL" >> "$GITHUB_OUTPUT"
+          echo "variables=$API_VAR_CALL" >> "$GITHUB_OUTPUT"
 
   run-action:
     needs: print-api-vars
