--- a/.github/workflows/test-api-variable-call.yml
+++ b/.github/workflows/test-api-variable-call.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Call action
         uses: ./.github/actions/output-job-inputs
         with:
-          variables_json: ${{ steps.print-api-vars.outputs.variables }}
+          variables_json: ${{ toJson(vars) }}
 
         
         
