--- a/.github/workflows/test-api-variable-call.yml
+++ b/.github/workflows/test-api-variable-call.yml
@@ -31,6 +31,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{ github.repository }}/actions/variables?per_page=30 | jq .variables)
           
+          echo "$API_VAR_CALL"
           echo "variables=$API_VAR_CALL" >> "$GITHUB_OUTPUT"
 
   run-action:
